Use .http for documentation

--- a/Demo.Api/appsettings.Development.json
+++ b/Demo.Api/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=AspNetCoreIdentityDemo;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+  },
+  "Jwt": {
+    "Issuer": "AspNetCoreIdentityDemo",
+    "ExpiryMinutes": 5,
+    "Key": "AspNetCoreIdentityDemo.ThisIsASecret"
   }
 }
