--- a/Demo.Api/appsettings.json
+++ b/Demo.Api/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Jwt": {
-    "Issuer": "AspNetCoreIdentityDemo",
-    "Key": "AspNetCoreIdentityDemo.ThisIsASecret"
-  }
+  "AllowedHosts": "*"
 }
