--- a/Demo.Api/appsettings.json
+++ b/Demo.Api/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=AspNetCoreIdentityDemo;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+  },
+  "Jwt": {
+    "Issuer": "AspNetCoreIdentityDemo",
+    "ExpiryMinutes": 5,
+    "Key": "AspNetCoreIdentityDemo.ThisIsASecret"
+  }
 }
